Add GetAllTags and Update Swagger
