# docs/swagger.json
@@ -1132,7 +1132,7 @@
         },
         "/api/tags": {
             "get": {
-                "description": "Retrieves all tags from the database.",
+                "description": "Get a list of all tags",
                 "consumes": [
                     "application/json"
                 ],
@@ -1149,7 +1149,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.TagResponse"
+                                "$ref": "#/definitions/models.Tag"
                             }
                         }
                     },
